# pegasus_gazebo_plugins

./: CMakeLists.txt  README.md  package.xml
cmake/: ClangFormatMacros.cmake
include/closed_loop_plugin/: closed_loop_plugin.h
src/: closed_loop_plugin.cpp
